--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     
-    <script src="2-Dot Notation vs Bracket Notation.js"></script>
+    <script src="3-Nested Object.js"></script>
 </body>
 </html>
